Fix overflow issue on landing page.

--- a/src/components/homepage/Hero.module.scss
+++ b/src/components/homepage/Hero.module.scss
@@ -20,7 +20,7 @@
   margin: 0;
   width: 100vw;
   height: 100vh;
-  // overflow-y: hidden;
+  overflow: hidden;
 
   @include small-size {
     padding: 0;
