--- a/src/css/homepage.scss
+++ b/src/css/homepage.scss
@@ -1,11 +1,10 @@
 // src/css/homepage.scss
 .homepage .container {
-    margin: auto;
-  }
-  
+  margin: auto;
+  height: 100vh;  
+  width: 100vw;   
+}
+
 .homepage {
-    overflow: hidden;
-    overflow-y: hidden;
-    overflow-x: hidden;
-  }
-  
+  overflow: hidden;  // Ensure no overflow
+}
